--- a/build.gradle
+++ b/build.gradle
@@ -29,4 +29,8 @@ repositories {
     flatDir {
         dirs '../libs'
     }
+
+    dependencies {
+        implementation 'org.openftc:easyopencv:1.5.2'
+    }
 }
